src/objects/Baremo_IEC__c.object
<CustomObject>
    <fields>
        <fullName>BAR_IEC_LKP_Baremo__c</fullName>
        <label>Baremo</label>
        <referenceTo>Baremo__c</referenceTo>
        <relationshipLabel>Baremos: Inclus/Exclus/Condic</relationshipLabel>
        <relationshipName>Baremos_Inclus_Exclus_Condic</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>BAR_IEC_NUM_Ordenacion__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Indica el orden en el que se muestra el texto en el PDF generado.</description>
        <label>Ordenación</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BAR_IEC_SEL_Tipo__c</fullName>
        <label>Tipo</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Inclusión</fullName>
                </value>
                <value>
                    <fullName>Exclusión</fullName>
                </value>
                <value>
                    <fullName>Condición</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BAR_IEC_TXT_Texto__c</fullName>
        <label>Texto</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <label>Baremo: Inclus/Exclus/Condic</label>
    <nameField>
        <label>Nombre de Baremo: Inclus/Exclus/Condic</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Baremos: Inclus/Exclus/Condic</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>